📄 feat: Add swagger em user
